@@ -18,12 +18,12 @@
     <parent>
         <groupId>com.telenav.kivakit</groupId>
         <artifactId>telenav-superpom-kivakit</artifactId>
-        <version>2.0.5</version>
+        <version>2.1.0</version>
         <relativePath/>
     </parent>
     
     <artifactId>kivakit-filesystems-hdfs</artifactId>
-    <version>1.6.2</version>
+    <version>1.7.0</version>
 
     <dependencies>
         
@@ -90,8 +90,6 @@
                     </systemPropertyVariables>
                     <useModulePath>false</useModulePath>
                     <argLine>
-                        --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-                        --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                         -Xmx2g
                     </argLine>
                 </configuration>
